--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,13 @@
   "manifest_version": 3,
   "permissions": [
     "tabs",
-    "storage"
+    "storage",
+    "activeTab"
   ],
+  "background":{
+    "service_worker":"/scripts/background.js",
+    "type": "module"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -19,7 +24,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "js": ["/scripts/content.js"],
       "run_at": "document_idle"
     }
   ]
